@@ -421,6 +421,10 @@ Disable terminal control even if terminal is detected.
 In an xterm, rxvt, screen, iris-ansi (compatible, TERM environment variable is examined), change the window's title to the name of song currently
 playing.
 .TP
+\fB\-\^\-pauseloop \fIseconds
+Set the length of the loop interval in terminal control paused mode, away from the default of 0.5 seconds, as a floating
+point number.
+.TP
 \fB\-\^\-name \fIname
 Set the name of this instance, possibly used in various places. This sets the client name for JACK output.
 .TP
