@@ -18,6 +18,9 @@
    is unknown, as opposed to 'help'.
 -- Reduce CPU load while just waiting for terminal input
    (thanks to bolshoytoster on github).
+-- Condense terminal control help output.
+-- Fix interaction of pause (looping) with buffer, adding --pauseloop
+   to set the loop interval.
 - libout123:
 -- Add same interruption handling to out123_write() as to
    unintr_write(), adding EAGAIN to fix bug 342 (thanks to Steffen Nurpmeso)
